--- a/config/credentials.yml
+++ b/config/credentials.yml
@@ -1,3 +1,5 @@
 AWS_ACCESS_KEY_ID: 'AKIAIGVNEJUWP6KDGC6A'
 AWS_SECRET_ACCESS_KEY: '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'
 S3_BUCKET_NAME: 'TEDxYale'
+Stripe_Publishable_Key: 'pk_test_naE7e2zsxr8UCYlrkjy0ynT9'
+Stripe_Secret_Key: 'sk_test_rtyaohMjiWQYQJVyDfkmWiOi'
